[tool.poetry]
name = "integration"
version = "0.3.0"
description = ""
authors = ["ESET Enterprise Integration <eset-enterprise-integration@eset.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.9.5"
pydantic = "2.8.2"
pyyaml = "6.0.1"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
